add email field to homepage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
   </head>
 
   <body class="font-serif text-blue-900 min-h-screen flex flex-col gap-8 bg-amber-50 p-6">
-    <main>
+    <main class="flex-1">
       <%= yield %>
     </main>
     <footer class="text-center text-xs mt-auto">&copy;2025 Counterspell Games LLC, all rights reserved.</footer>
