--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,21 +1,24 @@
-<div class="flex flex-col justify-between items-center h-full">
-  <%= image_tag "counterspell-logo.svg", class: "max-h-40 max-w-full" %>
-  <div class="space-y-4 font-script max-w-[36ch] indent-5">
-    <h1 class="text-2xl text-center mb-8">Welcome to Counterspell Games</h1>
+
+<div class="flex flex-col justify-between items-center gap-8">
+  <%= image_tag "counterspell-logo.svg", class: "max-h-40 max-w-full my-8" %>
+
+  <div class="space-y-4 max-w-[36ch] text-center *:text-balance">
+    <h1 class="font-display text-3xl mb-8">Welcome to Counterspell Games</h1>
     <p>
       In October, we're bringing the magic of Table-Top RPGs to beginners.
     </p>
 
     <p>
-      People like you, who've always wanted to play a game like Dungeons
-      &amp; Dragons, but have never had the time, the place, or a guide to
-      light their way.
+      People like you, who've always wanted to play a game like <a href="https://en.wikipedia.org/wiki/Dungeons_%26_Dragons">D&amp;D</a> or <a href="https://en.wikipedia.org/wiki/Daggerheart">Daggerheart</a>, but have never had the time, the place, or a guide to light their way.
     </p>
     <p>
-      We've built a whole new world for you to adventure within, and we can't wait
-      to share it with you.
+      We've built a whole new world for you to adventure within, and we can't wait to share it with you.
     </p>
 
-    <p class="mt-8 text-xl text-center">What will be <em>your</em> story?</p>
+    <div class="mt-8">
+      <p class="text-xl text-center">What will be <em>your</em> story?</p>
+
+      <%= render "sessions/email_form" %>
+    </div>
   </div>
 </div>
