--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,13 +22,8 @@
   </div>
 
   <div class="my-5">
-    <%= form.label :system_role %>
-    <%= form.text_field :system_role, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": user.errors[:system_role].none?, "border-red-400 focus:outline-red-600": user.errors[:system_role].any?}] %>
-  </div>
-
-  <div class="my-5">
-    <%= form.label :referrer %>
-    <%= form.text_field :referrer, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": user.errors[:referrer].none?, "border-red-400 focus:outline-red-600": user.errors[:referrer].any?}] %>
+    <%= form.label :display_name %>
+    <%= form.text_field :display_name, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": user.errors[:display_name].none?, "border-red-400 focus:outline-red-600": user.errors[:display_name].any?}] %>
   </div>
 
   <div class="inline">
