--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,10 +11,17 @@
     </div>
   <% end %>
 
+
+
+  <div class="my-5">
+    <%= form.label :display_name %>
+    <%= form.text_field :display_name, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": user.errors[:display_name].none?, "border-red-400 focus:outline-red-600": user.errors[:display_name].any?}] %>
+  </div>
+
   <div class="my-5">
     <%= form.label :email %>
     <%= form.text_field :email, disabled: true, class: [
-      "block shadow-sm rounded-md border px-3 py-2 mt-2 w-full",
+      "block shadow-sm rounded-md border px-3 py-2 mt-2 w-full opacity-50",
       {
         "border-gray-400 focus:outline-blue-600": user.errors[:email].none?,
         "border-red-400 focus:outline-red-600": user.errors[:email].any?
@@ -22,8 +29,8 @@
   </div>
 
   <div class="my-5">
-    <%= form.label :display_name %>
-    <%= form.text_field :display_name, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": user.errors[:display_name].none?, "border-red-400 focus:outline-red-600": user.errors[:display_name].any?}] %>
+    <%= form.label :bio %>
+    <%= form.rich_text_area :bio, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": user.errors[:bio].none?, "border-red-400 focus:outline-red-600": user.errors[:bio].any?}] %>
   </div>
 
   <div class="inline">
