--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,15 @@
 <% content_for :title, "Showing user" %>
 
-<div class="md:w-2/3 w-full">
+<div class="md:w-2/3 w-full space-y-6">
   <% if notice.present? %>
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-md inline-block" id="notice"><%= notice %></p>
   <% end %>
 
-  <h1 class="font-bold text-4xl">Showing user</h1>
+  <h1 class="font-bold text-4xl"><%= @user.display_name %></h1>
 
-  <%= render @user %>
+  <div class="prose">
+    <%= @user.bio %>
+  </div>
 
-  <%= link_to "Edit this user", edit_user_path(@user), class: "w-full sm:w-auto text-center rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
+  <%= link_to "Edit Profile", edit_user_path(@user), class: "w-full sm:w-auto text-center rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
 </div>
