--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,7 +1,19 @@
 <main class="space-y-6">
   <h1 class="font-bold text-4xl">Hello, <%= Current.user.display_name %>!</h1>
-  <nav class="*:block">
-    <%= link_to "heroes_path", heroes_path  %>
-    <%= link_to "ancestries_path", ancestries_path  %>
-  </nav>
+  
+  <section>
+    <h2 class="font-bold text-2xl mb-4">General</h2>
+    <nav class="space-y-2">
+      <%= link_to "Heroes", heroes_path, class: "block btn" %>
+    </nav>
+  </section>
+
+  <section>
+    <h2 class="font-bold text-2xl mb-4">Hero Trait Management</h2>
+    <nav class="space-y-2">
+      <%= link_to "Ancestries", ancestries_path, class: "block btn bg-gray-100 hover:bg-gray-50 text-black" %>
+      <%= link_to "Backgrounds", backgrounds_path, class: "block btn bg-gray-100 hover:bg-gray-50 text-black" %>
+      <%= link_to "Character Classes", character_classes_path, class: "block btn bg-gray-100 hover:bg-gray-50 text-black" %>
+    </nav>
+  </section>
 </main>
