improve hero form

--- a/app/views/heroes/_form.html.erb
+++ b/app/views/heroes/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="my-5">
     <%= form.label :pronouns %>
-    <%= form.collection_radio_buttons :pronouns, Hero.pronouns, :second, :first %>
+    <%= form.collection_radio_buttons :pronouns, Hero.pronouns, :first, :first %>
   </div>
 
   <div class="my-5">
