--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,9 @@
     <main class="flex-1">
       <%= yield %>
     </main>
-    <footer class="text-center text-xs mt-auto">&copy;2025 Counterspell Games LLC, all rights reserved.</footer>
+    <footer class="text-center text-xs mt-auto flex justify-center gap-2">
+      <p>&copy;2025 Counterspell Games LLC, all rights reserved.</p>
+      <%= button_to "Logout", session_path, method: :delete, class: "inline link" if authenticated? %>
+    </footer>
   </body>
 </html>
