--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 
   <body class="font-serif text-blue-900 min-h-screen flex flex-col gap-8 bg-amber-50 p-6">
 
-    <%= if flash.count %>
+    <% if flash.count %>
       <ul class="fixed bottom-4 right-4 w-40">
       <% flash.each do |flash_type, message| %>
         <li
