--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,20 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="font-serif text-blue-900 min-h-screen flex flex-col gap-8 bg-amber-50 p-6">
+  <body class="font-serif text-center text-blue-900 min-h-screen flex flex-col gap-8 bg-amber-50 p-6">
+
+    <header class="flex flex-col justify-center items-center gap-2">
+      <%= link_to root_path, class: "block h-20" do %>
+        <%= image_tag "counterspell-icon.svg", class: "h-full drop-shadow rotate-0 transition-transform transition-discrete transition-[filter] hover:rotate-3 hover:scale-110 hover:drop-shadow-lg" %>
+      <% end %>
+
+      <% if authenticated? %>
+        <nav class="justify-self-end flex gap-4">
+          <%= link_to "Settings", edit_user_path(Current.user) %>
+          <%= button_to "Logout", session_path, method: :delete, class: "inline link" %>
+        </nav>
+      <% end %>
+    </header>
 
     <% if flash.count %>
       <ul class="fixed bottom-4 right-4 w-40">
@@ -38,12 +51,10 @@
       </ul>
     <% end %>
 
-    <main class="flex-1">
-      <%= yield %>
-    </main>
+    <%= yield %>
+
     <footer class="text-center text-xs mt-auto flex justify-center gap-2">
       <p>&copy;2025 Counterspell Games LLC, all rights reserved.</p>
-      <%= button_to "Logout", session_path, method: :delete, class: "inline link" if authenticated? %>
     </footer>
   </body>
 </html>
