--- a/app/views/traits/edit.html.erb
+++ b/app/views/traits/edit.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Editing trait" %>
 
-<div class="md:w-2/3 w-full">
+<div class="md:w-2/3 w-full mx-auto">
   <h1 class="font-bold text-4xl">Editing trait</h1>
 
   <%= render "form", trait: @trait %>
