--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,7 +26,7 @@
       "What would you like #{
         Current.user.gm? ?
             "players"
-          : "our team"
+          : "our event staff"
       } to know about you?"
 
     %>
