--- a/app/views/traits/_form.html.erb
+++ b/app/views/traits/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="my-5">
     <%= form.label :name %>
-    <%= form.text_field :name, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": trait.errors[:name].none?, "border-red-400 focus:outline-red-600": trait.errors[:name].any?}] %>
+    <%= form.text_field :name %>
   </div>
 
   <div class="my-5" data-controller="abilities-editor">
