--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,13 @@
 <% content_for :title, "Showing user" %>
 
-<main class="md:w-2/3 w-full mx-auto space-y-6">
-  <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-md inline-block" id="notice"><%= notice %></p>
-  <% end %>
+<main class="space-y-6">
 
-  <h1 class="font-bold text-4xl"><%= @user.display_name %></h1>
+  <article class="bg-white rounded-xl max-w-screen-md shadow mx-auto p-6 space-y-6">
+    <h2 class="font-bold text-4xl"><%= @user.display_name %></h2>
 
-  <div class="prose">
-    <%= @user.bio %>
-  </div>
+    <div class="prose">
+      <%= @user.bio %>
+    </div>
 
-  <%= link_to "Edit Profile", edit_user_path(@user), class: "w-full sm:w-auto text-center rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
+  </article>
 </main>
