--- a/app/views/traits/_form.html.erb
+++ b/app/views/traits/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="my-5">
     <%= form.label :type %>
-    <%= form.text_field :type, list: "trait-types", class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": trait.errors[:type].none?, "border-red-400 focus:outline-red-600": trait.errors[:type].any?}] %>
+    <%= form.text_field :type, list: "trait-types" %>
     <datalist id="trait-types">
       <% Trait.distinct.pluck(:type).compact.sort.each do |trait_type| %>
         <option value="<%= trait_type %>">
@@ -34,34 +34,32 @@
       <div data-abilities-editor-target="container" class="space-y-2"></div>
 
       <button type="button"
-              data-action="click->abilities-editor#addAbility"
-              class="mt-2 px-3 py-1 text-sm bg-gray-100 hover:bg-gray-200 border border-gray-300 rounded-md">
+              data-action="click->abilities-editor#addAbility">
         + Add Ability
       </button>
     </div>
 
     <template data-abilities-editor-target="template">
-      <div class="ability-row flex gap-2 items-center">
+      <div class="ability-row">
         <input type="text"
                placeholder="Ability name"
-               class="ability-key flex-1 shadow-sm rounded-md border border-gray-400 px-3 py-2 focus:outline-blue-600"
+               class="ability-key"
                data-action="input->abilities-editor#updateAbilities"
                required>
         <input type="text"
                placeholder="Description"
-               class="ability-value flex-2 shadow-sm rounded-md border border-gray-400 px-3 py-2 focus:outline-blue-600"
+               class="ability-value"
                data-action="input->abilities-editor#updateAbilities"
                required>
         <button type="button"
-                data-action="click->abilities-editor#removeAbility"
-                class="px-2 py-1 text-sm bg-red-100 hover:bg-red-200 text-red-700 border border-red-300 rounded-md">
+                data-action="click->abilities-editor#removeAbility">
           Remove
         </button>
       </div>
     </template>
   </div>
 
-  <div class="inline">
-    <%= form.submit class: "w-full sm:w-auto rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white inline-block font-medium cursor-pointer" %>
+  <div>
+    <%= form.submit class: "btn" %>
   </div>
 <% end %>
