--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -6,6 +6,7 @@
     <nav class="space-y-2">
       <%= link_to "Heroes", heroes_path, class: "block btn" %>
       <%= link_to "Traits", traits_path, class: "block btn" %>
+      <%= link_to "Terms", terms_path, class: "block btn" %>
     </nav>
   </section>
 </main>
