--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,11 @@
 
     <footer class="text-center text-xs mt-auto flex justify-center gap-2">
       <p>&copy;2025 Counterspell Games LLC, all rights reserved.</p>
+      <nav>
+        <% Term.all.each do |t| %>
+          <%= link_to t.title, term_path(t) %>
+        <% end %>
+      </nav>
     </footer>
   </body>
 </html>
