--- a/app/views/terms/_term.html.erb
+++ b/app/views/terms/_term.html.erb
@@ -1,10 +1,6 @@
-<div id="<%= dom_id term %>" class="w-full sm:w-auto my-5 space-y-5">
-  <div>
-    <strong class="block font-medium mb-1">Title:</strong>
-    <%= term.title %>
+<article id="<%= dom_id term %>" class="w-full sm:w-auto space-y-6">
+  <h1 class="font-bold text-4xl"><%= term.title %></h1>
+  <div class="prose text-left">
+    <%= term.body %>
   </div>
-  <div>
-    <strong class="block font-medium mb-1">Slug:</strong>
-    <%= term.slug %>
-  </div>
-</div>
+</article>
