--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
 
     <footer class="text-center text-xs mt-auto flex justify-center gap-2">
       <p>&copy;2025 Counterspell Games LLC, all rights reserved.</p>
-      <nav>
+      <nav class="flex gap-1.5">
         <% Term.all.each do |t| %>
           <%= link_to t.title, term_path(t) %>
         <% end %>
