--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,8 +49,8 @@
     <footer class="text-center text-xs mt-auto flex justify-center gap-2">
       <p>&copy;2025 Counterspell Games LLC, all rights reserved.</p>
       <nav class="flex gap-1.5">
-        <% Term.all.each do |t| %>
-          <%= link_to t.title, term_path(t) %>
+        <% Page.all.each do |t| %>
+          <%= link_to t.title, page_path(t) %>
         <% end %>
       </nav>
     </footer>
