--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: term, class: "contents text-left") do |form| %>
-  <% if term.errors.any? %>
+<%= form_with(model: page, class: "contents text-left") do |form| %>
+  <% if page.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-md mt-3">
-      <h2><%= pluralize(term.errors.count, "error") %> prohibited this term from being saved:</h2>
+      <h2><%= pluralize(page.errors.count, "error") %> prohibited this page from being saved:</h2>
 
       <ul class="list-disc ml-6">
-        <% term.errors.each do |error| %>
+        <% page.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
