--- a/app/views/pages/_page.html.erb
+++ b/app/views/pages/_page.html.erb
@@ -1,6 +1,6 @@
 <article id="<%= dom_id page %>" class="w-full sm:w-auto space-y-6">
   <h1 class="font-bold text-4xl"><%= page.title %></h1>
-  <div class="prose text-left">
+  <div class="text-left">
     <%= page.body %>
   </div>
 </article>
