--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,11 @@
 <% content_for :title, "Showing user" %>
 
-<main class="space-y-6">
-
+<main>
   <article class="bg-white rounded-xl max-w-screen-md shadow mx-auto p-6 space-y-6">
     <h2 class="font-bold text-4xl"><%= @user.display_name %></h2>
 
-    <div class="prose">
+    <div class="text-left">
       <%= @user.bio %>
     </div>
-
   </article>
 </main>
