slightly better layout on mobile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
 
     <%= yield %>
 
-    <footer class="text-center text-xs mt-auto flex justify-center gap-2">
+    <footer class="text-center text-xs mt-auto md:flex justify-center gap-2">
       <p>&copy;2025 Counterspell Games LLC, all rights reserved.</p>
       <nav class="flex gap-1.5">
         <% Page.all.each do |t| %>
