--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Editing page" %>
 
-<main class="max-w-screen-sm mx-auto">
+<main class="w-full max-w-screen-sm mx-auto">
   <h1 class="font-bold text-4xl">Editing page</h1>
 
   <%= render "form", page: @page %>
